manual trig button
