# server/Application/Models/StringConstants.cs
@@ -2,9 +2,7 @@ namespace Application.Models;
 
 public static class StringConstants
 {
-    public const string Dashboard = nameof(Dashboard);
-    public const string Device = nameof(Device);
-
-    public const string ChangePreferences = nameof(ChangePreferences);
-    public const string Log = nameof(Log);
+    // example
+     public const string Dashboard = nameof(Dashboard);
+    
 }
